CDO NEWS
--------

Version 1.7.0 (28 October 2015):

   New features:
     * distgrid: added support for curvilinear grids
     * collgrid: added support for curvilinear grids
   New operators:
     * setmisstonn: Set missing value to nearest neightbour
     * vertstd1: Vertical standard deviation [Divisor is (n-1)]
     * vertvar1: Vertical variance [Divisor is (n-1)]
     * seasvar1: Seasonal variance [Divisor is (n-1)]
     * seasstd1: Seasonal standard deviation [Divisor is (n-1)]
     * yseasvar1: Multi-year seasonally variance [Divisor is (n-1)]
     * yseasstd1: Multi-year seasonally standard deviation [Divisor is (n-1)]
   Changed operators:
     * vertvar, vertstd: changed to weighted var/std if layer bounds are available
   Fixed bugs:
     * cdo -t table_file does not complain if table_file is a directory [Bug #5891]
     * expr: operators return 0 for arithmetics on constants [Bug #5875]
     * env. CDO_TIMESTAT_DATE does not work [Bug #5758]
     * splityear*: support for constant fields is missing [Bug #5759]
     * yseaspctl: check of verification date failed [Bug #5810]

Version 1.6.9 (28 April 2015):

   New features:
     * select: added parameter date, startdate, enddate 
     * expr: added support for operator ?:,&&,||
     * option --reduce_dim: reduce dimension (Timstat, Fldstat)
   New operators:
     * after: ECHAM standard post processor
     * aexpr: Evaluate expressions and append results
     * aexprf: Evaluate expression script and append results
     * selzaxisname: Select z-axes by name
     * genlevelbounds: Generate level bounds
   Fixed bugs:
     * ydrunpctl: does not work in combination with ydrunmin/ydrunmax
     * Ensstat: added support for different missing values
     * seltimestep: abort if none of the selected timesteps are found

Version 1.6.8 (26 March 2015):

   New features:
     * select, delete: added wildcard support for parameter name
     * expr: added support for logical operators <, >, <=, >=, !=, ==, <=>