@@ -163,7 +163,7 @@ Operator catalog:
    Setmiss       setmisstoc      Set missing value to constant
    Setmiss       setrtomiss      Set range to missing value
    Setmiss       setvrange       Set valid range
-   Setmiss       setmisstonn     Set missing value to nearest neightbour
+   Setmiss       setmisstonn     Set missing value to nearest neightbor
 -------------------------------------------------------------
    Arithmetic
 -------------------------------------------------------------
